# engram-poc

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
adapters/: adapter_config.json
configs/: lora_config.yaml
data/: test_exact.jsonl  train_exact.jsonl  valid_exact.jsonl
data/exact_5k/: test_exact.jsonl  train_exact.jsonl  valid_exact.jsonl
data/patterns/: code_idioms.yaml  error_fixes.yaml  facts.yaml  formats.yaml
docs/: ai_agent_instructions.md  architecture.md  comparison-weagan.md  design.md  engram-memory-integration.md  explanation.md  gpu_setup.md  plan.md  prd.md  proposed-work.md  research.txt  results-cuda.md  results-mlx.md  status.md  video_script.md
results/: evaluation_report.md  training_run_001.md
scripts/: demo.sh  eval.sh  eval_combined.sh  eval_gpu.sh  run_all.sh  train.sh  train_engram.sh  train_gpu.sh
src/data_gen/: __init__.py  augment.py  generate.py  generate_exact_match.py  loader.py  types.py  writer.py
src/demo/: __init__.py  demo.py  demo_unified.py
src/eval/: __init__.py  compare.py  metrics.py  runner.py
src/eval_gpu/: __init__.py  compare.py
src/memory/: __init__.py  conditional_engram.py  demo_conditional.py  demo_engram.py  engram_module.py  eval_combined.py  model_wrapper.py  prepopulated_memory.py  test_engram.py  train_engram.py
src/train_gpu/: __init__.py  train.py
src/visualize/: __init__.py  generate_plots.py
unsloth-nvidia/: README.md  requirements.txt
unsloth-nvidia/configs/: train_config.yaml
unsloth-nvidia/data/: patterns
unsloth-nvidia/results/: comparison.json
unsloth-nvidia/scripts/: demo.sh  eval.sh  run_all.sh  train.sh
(+5 files in other folders)
